--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==3.2.9
 django-bootstrap3==21.1
+django-cors-headers==3.11.0
 django-heroku==0.3.1
 django-registration==3.1.2
 django-registration-redux==2.9
