--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.4.1
 autopep8==1.6.0
-
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.10.0
 certifi==2021.10.8
 cloudinary==1.28.0
@@ -10,6 +10,7 @@ Django==3.2.9
 django-bootstrap3==21.1
 django-cors-headers==3.11.0
 django-heroku==0.3.1
+django-jazzmin==2.4.9
 django-registration==3.1.2
 django-registration-redux==2.9
 django-tinymce==3.4.0
