--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ gunicorn==20.1.0
 importlib-metadata==4.10.1
 Markdown==3.3.6
 Pillow==8.4.0
-psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pycodestyle==2.8.0
 python-decouple==3.5
 pytz==2021.3
