--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ cloudinary==1.28.0
 confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==3.2.9
-django-bootstrap3==21.1
+django-bootstrap4==21.1
 django-cors-headers==3.11.0
 django-filter==21.1
 django-heroku==0.3.1
@@ -20,7 +20,7 @@ gunicorn==20.1.0
 importlib-metadata==4.10.1
 Markdown==3.3.6
 Pillow==8.4.0
-psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pycodestyle==2.8.0
 python-decouple==3.5
 pytz==2021.3
