--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dj-database-url==0.5.0
 Django==3.2.9
 django-bootstrap4==21.1
 django-cors-headers==3.11.0
+django-decouple==2.1
 django-filter==21.1
 django-heroku==0.3.1
 django-jazzmin==2.4.9
